3.0a5

  - Supervisorctl now supports persistent readline history.  To
    enable, add "history_file = <pathname>" to the '[supervisorctl']
    section in your supervisord.conf file.

  - Multiple commands may now be issued on one supervisorctl command
    line, e.g. "restart prog; tail -f prog".  Separate commands with a
    single semicolon; they will be executed in order as you would
    expect.

3.0a4

  - 3.0a3 broke Python 2.3 backwards compatibility.

  - On Debian Sarge, one user reported that a call to
    options.mktempfile would fail with an "[Errno 9] Bad file
    descriptor" at supervisord startup time.  I was unable to
    reproduce this, but we found a workaround that seemed to work for
    him and it's included in this release.  See
    http://www.plope.com/software/collector/252 for more information.
    Thanks to William Dode.

  - The fault ALREADY_TERMINATED has been removed.  It was only 
    raised by supervisor.sendProcessStdin().  That method now returns 
    NOT_RUNNING for parity with the other methods. (Mike Naberezny)

  - The fault TIMED_OUT has been removed.  It was not used.

  - Supervisor now depends on meld3 0.6.4, which does not compile its
    C extensions by default, so there is no more need to faff around
    with NO_MELD3_EXTENSION_MODULES during installation if you don't
    have a C compiler or the Python development libraries on your
    system.

  - Instead of making a user root around for the sample.conf file,
    provide a convenience command "echo_supervisord_conf", which he can
    use to echo the sample.conf to his terminal (and redirect to a file 
    appropriately).  This is a new user convenience (especially one who
    has no Python experience).

  - Added 'numprocs_start' config option to '[program:x]' and
    '[eventlistener:x]' sections.  This is an offset used to compute
    the first integer that 'numprocs' will begin to start from.
    Contributed by Antonio Beamud Montero.
